--- a/Project 06 - AR with Gesture Recognition/AR-GestureRecognition/AR-GestureRecognition/Base.lproj/Main.storyboard
+++ b/Project 06 - AR with Gesture Recognition/AR-GestureRecognition/AR-GestureRecognition/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Wyp-fU-fOT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14111" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Wyp-fU-fOT">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,7 +13,7 @@
         <!--View Controller-->
         <scene sceneID="8Zp-UR-tCI">
             <objects>
-                <viewController id="Wyp-fU-fOT" customClass="ViewController" customModule="ARKit_Headset_View" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Wyp-fU-fOT" customClass="ViewController" customModule="AR_GestureRecognition" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="11t-Qg-rb9"/>
                         <viewControllerLayoutGuide type="bottom" id="DFF-je-352"/>
